site/_extensions/nrichers/slideover/slideover.css
/* Import Inter font from Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');

.slideover__presentation {
    position: relative;
}

:root {
    --slideover-default-lr: 40vw;
    --slideover-default-tb: 80vw;

    --slideover-3quarters-lr: calc(var(--slideover-default-lr) * 0.75);
    --slideover-3quarters-tb: calc(var(--slideover-default-tb) * 0.75);

    --slideover-half-lr: calc(var(--slideover-default-lr) / 2);
    --slideover-half-tb: calc(var(--slideover-default-tb) / 2);

    --slideover-third-lr: calc(var(--slideover-default-lr) / 3);
    --slideover-third-tb: calc(var(--slideover-default-tb) / 3);
}

/* Modifiers for half, third, three quarters (LR) */
.slideover--l.slideover__content.half,
.slideover--r.slideover__content.half {
    width: var(--slideover-half-lr) !important;
}

.slideover--l.slideover__content.third,
.slideover--r.slideover__content.third {
    width: var(--slideover-third-lr) !important;
}

.slideover--l.slideover__content.three-quarters,
.slideover--r.slideover__content.three-quarters {
    width: var(--slideover-3quarters-lr) !important;
}

/* Modifiers for half, third, three quarters (TB) */
.slideover--t.slideover__content.half,
.slideover--b.slideover__content.half {
    width: var(--slideover-half-tb) !important;
}

.slideover--t.slideover__content.third,
.slideover--b.slideover__content.third {
    width: var(--slideover-third-tb) !important;
}

.slideover--t.slideover__content.three-quarters,
.slideover--b.slideover__content.three-quarters {
    width: var(--slideover-3quarters-tb) !important;
}

.slideover__container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
    z-index: 1;
    display: flex;
    justify-content: left;
    align-items: left;
}

.slideover__content {
    position: fixed;
    background: #FAFAFA;
    color: #222222;
    border: 1px solid #083E44;
    /* border-left-width: 5px; */
    border-radius: 5px;
    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2); 
    transition: transform 0.3s ease-in-out;
    pointer-events: auto;
    z-index: 1001;
    display: flex;
    flex-direction: column;
    font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
    font-size: 1.25em;
    margin: 0;
}

.slideover--r.slideover__content {
    top: 50%;
    right: 0;
    left: auto;
    height: auto;
    max-height: 80vh;
    width: var(--slideover-default-lr);
    max-width: 100vw;
    box-sizing: border-box;
    transform: translateY(-50%) translateX(calc(100% - 60px));
    transition: transform 0.3s cubic-bezier(.4,0,.2,1);
    display: flex;
    flex-direction: column;
    padding: 20px;
    border-radius: 8px 0 0 8px;
    overflow: hidden;
    border-left-width: 5px;
}

.slideover--r .slideover__content-area {
    flex: 1;
    overflow-y: auto;
    margin-top: -20px;
    margin-bottom: -20px;
    padding: 40px 1.5rem 1.5rem;
}

.slideover--r.slideover__content.slideover__content--active {
    transform: translateY(-50%) translateX(0);
}

.slideover--b.slideover__content {
    bottom: 0;
    left: 50%;
    transform: translateX(-50%) translateY(calc(100% - 70px));
    top: auto;
    width: var(--slideover-default-tb);
    height: auto;
    max-height: 40vh;
    border-radius: 8px 8px 0 0;
    box-shadow: 0 -2px 4px rgba(8, 62, 68, 0.1), -2px 0 4px rgba(8, 62, 68, 0.1), 2px 0 4px rgba(8, 62, 68, 0.1);
    padding: 0 20px;
    text-align: left;
    overflow: hidden;
    padding-bottom: 20px;
    border-top-width: 5px;
}
.slideover--b.slideover__content.slideover__content--active {
    transform: translateX(-50%) translateY(0);
}

.slideover--t.slideover__content {
    top: 0;
    left: 50%;
    transform: translateX(-50%) translateY(calc(-100% + 70px));
    bottom: auto;
    width: var(--slideover-default-tb);
    height: auto;
    max-height: 40vh;
    border-radius: 0 0 8px 8px;
    box-shadow: 0 2px 4px rgba(8, 62, 68, 0.1), -2px 0 4px rgba(8, 62, 68, 0.1), 2px 0 4px rgba(8, 62, 68, 0.1);
    padding: 20px;
    text-align: left;
    overflow: hidden;
    border-bottom-width: 5px;
}

.slideover--t.slideover__content.slideover__content--active {
    transform: translateX(-50%) translateY(0);
}

.slideover--t .slideover__header {
    justify-content: flex-end;
    padding-right: 16px;
    margin: 0 -20px;
    border-radius: 0 0 8px 8px;
    background: transparent;
}

.slideover--t .slideover__content-area {
    margin-left: -20px;
    margin-right: -20px;
    padding-left: 3rem;
    padding-right: 3rem;
    padding-top: 0px;
    text-align: left;
}

.slideover__header {
    height: 40px;
    display: flex;
    align-items: left;
    justify-content: left;
    cursor: pointer;
    flex-shrink: 0;
    padding: 0 8px;
    margin: 0;
    position: relative;
    z-index: 3;
    pointer-events: auto;
}

.slideover__toggle {
    display: flex;
    align-items: left;
    justify-content: left;
    width: 24px;
    height: 24px;
    transition: transform 0.3s ease;
    color: #083e44;
    margin: 0;
    cursor: pointer;
    pointer-events: auto;
    position: absolute;
    top: 8px;
    right: 8px;
    z-index: 10;
}

.slideover__toggle svg {
    width: 24px;
    height: 24px;
    display: block;
    fill: currentColor;
    stroke: currentColor;
    stroke-width: 1px;
    pointer-events: auto;
}

.slideover__toggle--active {
    transform: rotate(180deg);
}

.slideover__content-area {
    padding: 0 1.5rem 1.5rem;
    overflow-y: auto;
    color: #083e44;
    line-height: 1.5;
    margin: -40px 0 0 0;
    position: relative;
    z-index: 2;
    padding-top: 25px; 
    opacity: 1;
    visibility: visible;
    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
}

.slideover__content-area strong {
    color: #3E6C69;
}

.slideover__content-area a {
    color: #DE257E;
    text-decoration: none;
}

.slideover__content-area .embed {
    margin-left: 25px;
    padding-left: 20px;
    padding-top: 0px;
    background-color: #f5fcfd;
    font-size: 0.9em;
    border: 1px solid rgba(8, 62, 68, 0.2);
    border-radius: 5px;
}

.slideover__content-area a:hover {
  text-decoration: underline 2px solid #083E44;
}

.slideover__content--active .slideover__content-area {
    z-index: 3;
}

.slideover__content:not(.slideover__content--active) .slideover__content-area {
    opacity: 0;
    visibility: hidden;
}

.slideover__content-area p,
.slideover__content-area div {
    padding-block-start: 0.5em;
}

.slideover__content-area > *:first-child {
    margin-top: 0;
    padding-top: 0;
    padding-block-start: 0;
}

.slideover--b .slideover__header {
    justify-content: flex-end;
    padding-right: 16px;
    margin: 0 -20px;
    border-radius: 8px 8px 0 0;
    background: transparent;
}

.slideover--b .slideover__content-area {
    margin-left: -20px;
    margin-right: -20px;
    padding-left: 3rem;
    padding-right: 3rem;
    text-align: left;
}

@media screen and (max-width: 800px) {
    .slideover--r.slideover__content {
        max-height: 90vh;
        width: 90vw;
    }
    .slideover--b.slideover__content {
        width: 90%;
        max-height: 60vh;
    }
    .slideover--t.slideover__content {
        width: 90%;
        max-height: 60vh;
    }
} 

.quote {
    font-style: italic;
    color: #555;
    border-left: 3px solid #083e44;
    padding-left: 1em;
    margin: 0.5em 0;
    display: inline-block;
} 

.slideover--r .slideover__toggle {
  left: 8px;
  right: auto;
} 

.slideover--r .slideover__header {
  margin: -20px 0;
}

.slideover--r .slideover__content-area {
  margin-top: -20px;
  margin-bottom: -20px;
} 

.slideover__content-area strong {
    font-weight: 700;
}

.slideover__content-area em {
    font-style: italic;
}

.slideover__content-area p {
    margin: 1em 0;
}

.slideover__content-area ul,
.slideover__content-area ol {
    margin: 1em 0;
    padding-left: 2em;
}

.slideover__content-area blockquote {
    border-left: 2px solid #3E6C69;
    margin: 1em 0;
    padding-left: 1em;
    color: #555;
}

.slideover__content-area div.sourceCode {
    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
    font-size: 0.9em;
    background-color: #FAFAFA;
    padding: 0.4em 0.6em;
}

.slideover__content-area code {
    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
    color: #3E6C69;
    background-color: #EAF8FA;
    font-size: 0.9em;
    padding: 0.1em 0.2em;
    border: 1px solid rgba(8, 62, 68, 0.2);
    border-radius: 5px;
}

.slideover__content-area pre.numberSource {
  margin-left: 1em;
  border-left: none;
  background-color: #f5fcfd;
  padding-left: 4px;
}

.slideover--l.slideover__content {
    top: 50%;
    left: 0;
    right: auto;
    height: auto;
    max-height: 80vh;
    width: var(--slideover-default-lr);
    max-width: 100vw;
    box-sizing: border-box;
    transform: translateY(-50%) translateX(calc(-100% + 60px));
    transition: transform 0.3s cubic-bezier(.4,0,.2,1);
    display: flex;
    flex-direction: column;
    padding: 20px;
    border-radius: 0 8px 8px 0;
    overflow: hidden;
    border-right-width: 5px;
}

.slideover--l .slideover__content-area {
    flex: 1;
    overflow-y: auto;
    margin-top: -20px;
    margin-bottom: -20px;
    padding: 40px 1.5rem 1.5rem;
}

.slideover--l.slideover__content.slideover__content--active {
    transform: translateY(-50%) translateX(0);
}

.slideover--l .slideover__toggle {
    right: 8px;
    left: auto;
}

.slideover--l .slideover__toggle {
    transform: rotate(180deg);
}

.slideover--l .slideover__toggle--active {
    transform: rotate(0deg);
}

.slideover--t .slideover__toggle {
    transform: rotate(180deg);
}

.slideover--t .slideover__toggle--active {
    transform: rotate(0deg);
}

.slideover--l .slideover__header {
    margin: -20px 0;
}

.slideover--l .slideover__content-area {
    margin-top: -20px;
    margin-bottom: -20px;
}

@media screen and (max-width: 800px) {
    .slideover--l.slideover__content {
        max-height: 90vh;
        width: 90vw;
    }
}

.slideover--t .slideover__toggle {
    top: auto;
    bottom: 8px;
    right: 8px;
    left: auto;
}

